# sudko

./: .gitignore  README.md  package-lock.json  package.json  tslint.json
client/: package-lock.json  package.json
client/src/: App.css  App.test.tsx  App.tsx  AsciiWrapper.tsx  Types.tsx  Validate.test.tsx
client/src/components/: API.tsx  ControlButtons.css  ControlButtons.tsx  DateButton.tsx  (+12 more)
db/: db.json  package-lock.json  package.json
pyserver/: pyproject.toml
pyserver/sudko/: manage.py
pyserver/sudko/sudko/: asgi.py  local_settings.py  middleware.py  settings.py  urls.py  wsgi.py
pyserver/sudko/sudko_db/: apps.py  models.py  views.py
pyserver/sudko/sudko_db/migrations/: 0001_initial.py  0002_add_user_info_user_puzzle.py
server/: .gitignore  cookie-file.txt  package-lock.json  package.json  server.js  server1.ts
server/sessions/: 0eb80a4e-8b1c-4515-bf92-f8516ec95138.json  170d1b43-527c-49a5-af16-af9bfa454f0c.json  527901ad-b3df-4b76-8870-c2fdfb4e38d0.json  584452eb-6838-4f5f-afc4-ce3f6b428eb8.json  5b735b28-1f10-4961-b991-88b891ba7e05.json  60d6dae2-6aef-43a6-8a1e-ee432779dcb7.json  797d95d7-ff42-4b07-94c8-fafd275eb45d.json  8a45054b-8bd4-482b-b9fc-0384f41048d3.json  932a4d66-657d-4e95-952a-e4ea9e9405f0.json  b8fafe7d-1229-4b9e-aba8-431863296c40.json  ca6c27fd-3f0d-438c-b91a-b05e79673991.json  d3eac0d2-325e-4513-a5a4-db66de49d60d.json  d8a5bd23-8fe6-45f3-adf5-b183ca863ec4.json  e1e12e25-9bc9-4c74-a82f-bccc5083b932.json  ec16b91f-b68b-4366-95ba-dc213e9cfefd.json
src/: App.css  App.tsx  AsciiWrapper.tsx  Types.tsx  Validate.test.tsx  Validate.tsx
